--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
           <img src="img/logo.gif" width="60%" >
         </div>
         <div id="cart-container">
-            <div id="cart"><input type="image" src="img/car.gif" width="10%"></imput>
+            <div id="cart"><input type="image" src="img/car.gif" width="10%"></input>
+            <input id="cart-count" type="text" readonly/>
             </div>
             <span id="itemCount"></span>
         </div>
@@ -37,13 +38,13 @@
           <div id="icon">    
               <p class="fl_left">  
                   <div id="one">
-                    <a href="https://www.skype.com/"><img class="icon" src="img/skype.ico"/></a>
+                    <a href="https://www.skype.com/"><img class="icon" src="img/skype.ico" width="13%"/></a>
                   </div> 
                   <div id="two">
-                    <a href="https://www.outlook.com"><img class="icon" src="img/skype.ico"/></a>
+                    <a href="https://www.outlook.com"><img class="icon" src="img/skype.ico" width="13%"/></a>
                   </div> 
                   <div id="tree">
-                    <a href="https://www.facebook.com"><img class="icon" src="img/skype.ico"/></a>
+                    <a href="https://www.facebook.com"><img class="icon" src="img/skype.ico" width="13%"/></a>
                   </div>  
               </p class="fl_right">
           </div> 
