--- a/web/index.html
+++ b/web/index.html
@@ -15,9 +15,12 @@
  <!------------------------------------------------Header ----------------------------------------------->  
      <!--  Drop Down Menu Navigation Starts Here  -->
 	 <div id="dropDownContainer">
+        <div class="homeIconDropDown">
+            <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
+        </div>
         <div class="menuDivider"></div>
         <div id="dropDown">
-            <button class="closeIcon"><img src="img/home.png" height="32" width="32"></button>
+            <button class="closeIcon"><img src="img/store.png" height="32" width="32"></button>
             <button class="closeIcon"><img src="img/about.png" height="32" width="32"></img></button>
 			<button class="closeIcon"><img src="img/contact.png" height="32" width="32"></img></button>
 						
@@ -31,6 +34,9 @@
 <!--  Wide Menu Navigation Starts Here  -->
     <div id="mainMenuOuterContainer">
         <div id="mainMenuInnerContainer">
+            <div class="homeIconStatic">
+                <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
+            </div>
             <div class="menuDivider"></div>
                 <nav id="mainMenuItems">
                     <ul id="mainMenuButtons">
@@ -58,25 +64,23 @@
   
 <!------------------------------------------------Categories -----------------------------------------------> 
 	
-<div id="categories" height="80" width="80" ></div>
+<div id="categories"></div>
 
 <!----------------------------------------------Footer------------------------------------------------------>
-
-<footer id="copyright">
+<footer id="copyright" class="clear">
         <a class="fl_right">McKenna Distributors LTD &copy; - 2016 </a>
-          
-<div id="icon">    
-        <p class="fl_left">  
+          <div id="icon">    
+              <p class="fl_left">  
                   <div id="one">
-                     <a href="https://www.facebook.com"><img src="img/fb.png" height"32" width="32"/></i>
+                    <i class="fa fa-facebook-official" aria-hidden="true" a href="https://www.skype.com/"></i>
                   </div> 
                   <div id="two">
-                     <a href="https://www.twitter.com"><img src="img/tw.png" height"32" width="32"/></i>
+                    <a href="https://www.outlook.com"><i class="fa fa-facebook-official" aria-hidden="true"></i>
                   </div> 
                   <div id="tree">
-                     <a href="https://www.outlook.com"><img src="img/mail.png" height"38" width="38"/></i>
+                    <a href="https://www.facebook.com"><i class="fa fa-facebook-official" aria-hidden="true"></i>
                   </div>  
-              </p>
+              </p class="fl_right">
           </div> 
 </footer>
 </body>
