--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
 	 <div id="dropDownContainer">
         <div class="menuDivider"></div>
         <div id="dropDown">
-            <button class="closeIcon"><img src="img/home.png" height="32" width="32"><a href="index.html"></img></button>
             <button class="closeIcon"><img src="img/about.png" height="32" width="32"><a href="about.html"></img></button>
-            <button class="closeIcon"><img src="img/store.png" height="32" width="32"><a href="store.html"></img></button>
-			<button class="closeIcon"><img src="img/contact.png" height="32" width="32"><a href="contact.html"></img></button>      
+            <button class="closeIcon"><img src="img/store.png" height="32" width="32"><a href="index.html"></img></button>
+			<button class="closeIcon"><img src="img/contact.png" height="32" width="32"><a href="contact.html"></img></button>
 						
         </div>
     </div>
@@ -35,9 +34,8 @@
             <div class="menuDivider"></div>
                 <nav id="mainMenuItems">
                     <ul id="mainMenuButtons">
-                        <li class="mainMenuButton"><a href="home.html">home</a></li>
                         <li class="mainMenuButton"><a href="about.html">About Us</a></li>
-						<li class="mainMenuButton"><a href="store.html">store</a></li>
+						<li class="mainMenuButton"><a href="index.html">store</a></li>
 						<li class="mainMenuButton"><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
@@ -62,6 +60,7 @@
   
 <!------------------------------------------------Categories -----------------------------------------------> 
 	
+<div id="categories"></div>
 
 <!----------------------------------------------Footer------------------------------------------------------>
 
