--- a/about.html
+++ b/about.html
@@ -53,16 +53,23 @@
           <img src="img/logo.gif" width="40%"/>
         </div>	
         <div id="cart-container">
-            <div id="cart"><input type="image" src="img/car.gif" height"32" width="32"></input>
+             <a href="cart.html"><div id="cart"><input type="image" src="img/car.gif" height"32" width="32"></input>
             <input id="cart-count" type="text" readonly/>
-            </div>
+            </div></a>
             <span id="itemCount"></span>
         </div>
     </div>   
   
-<!------------------------------------------------Categories -----------------------------------------------> 
+<!------------------------------------------------content -----------------------------------------------> 
+<div class="about">
+    <h1><b>"We are a big Family"<b></h1>
+        
+    <img id="img1"   src="img/stores.jpg"><p align="justify">With more than 40 years bringing their services to the people of Dublin McKenna Distributors is a modest shop in the city center, where you can get everything you look both electronic devices and accessories for your garden or security cameras among others.<br>
+        <br>
+        This store is being attended by the 2nd generation of the McKenna family is characterized by its gentle and friendly towards their customers attention from the first minute who are considered part of the family.</p></img>
 
-
+    <img id="img2" src="img/stores1.jpg"/>
+</div>
 <!----------------------------------------------Footer------------------------------------------------------>
 
 <footer class="footer">
