--- a/cart.html
+++ b/cart.html
@@ -53,16 +53,17 @@
           <img src="img/logo.gif" width="40%"/>
         </div>	
         <div id="cart-container">
-             <a href="cart.html"><div id="cart"><input type="image" src="img/car.gif" height"32" width="32"></input>
-            <input id="cart-count" type="text" readonly/>
-            </div></a>
+            <a href="cart.html"><div id="cart"><input type="image" src="img/car.gif" height"32" width="32"></input>
+                    <input id="cart-count" type="text" readonly/>
+                </div></a>
             <span id="itemCount"></span>
         </div>
     </div>   
   
 <!------------------------------------------------Categories -----------------------------------------------> 
 	
-<div id="categories"></div>
+<div id="cart-content"></div>
+<h2 id="total"></h2>
 
 <!----------------------------------------------Footer------------------------------------------------------>
 
