--- a/contact.html
+++ b/contact.html
@@ -53,9 +53,9 @@
           <img src="img/logo.gif" width="40%"/>
         </div>	
         <div id="cart-container">
-            <div id="cart"><input type="image" src="img/car.gif" height"32" width="32"></input>
+             <a href="cart.html"><div id="cart"><input type="image" src="img/car.gif" height"32" width="32"></input>
             <input id="cart-count" type="text" readonly/>
-            </div>
+            </div></a>
             <span id="itemCount"></span>
         </div>
     </div>   
