--- a/about.html
+++ b/about.html
@@ -15,7 +15,6 @@
  <!------------------------------------------------Header ----------------------------------------------->  
      <!--  Drop Down Menu Navigation Starts Here  -->
 	 <div id="dropDownContainer">
-        <div class="menuDivider"></div>
         <div id="dropDown">
             <button class="closeIcon"><img src="img/home.png" height="32" width="32"><a href="index.html"></img></button>
             <button class="closeIcon"><img src="img/about.png" height="32" width="32"><a href="about.html"></img></button>
@@ -30,20 +29,16 @@
 
 
 <!--  Wide Menu Navigation Starts Here  -->
-    <div id="mainMenuOuterContainer">
-        <div id="mainMenuInnerContainer">
-            <div class="menuDivider"></div>
-                <nav id="mainMenuItems">
+    <div id="mainMenuOuterContainer">             
                     <ul id="mainMenuButtons">
                         <li class="mainMenuButton"><a href="index.html">Home</a></li>
                         <li class="mainMenuButton"><a href="about.html">About Us</a></li>
 						<li class="mainMenuButton"><a href="store.html">store</a></li>
 						<li class="mainMenuButton"><a href="contact.html">Contact</a></li>
                     </ul>
-                </nav>
+               
 			
-		</div>
-    </div>
+	 </div>
 	
 	
 <!--  Wide Menu Navigation Ends Here  -->
@@ -64,11 +59,12 @@
 <div class="about">
     <h1><b>"We are a big Family"<b></h1>
         
-    <img id="img1"   src="img/stores.jpg"><p align="justify">With more than 40 years bringing their services to the people of Dublin McKenna Distributors is a modest shop in the city center, where you can get everything you look both electronic devices and accessories for your garden or security cameras among others.<br>
+    <div class="img0"><img src="img/stores.jpg"></div>
+        <p>With more than 40 years bringing their services to the people of Dublin McKenna Distributors is a modest shop in the city center, where you can get everything you look both electronic devices and accessories for your garden or security cameras among others.<br>
         <br>
         This store is being attended by the 2nd generation of the McKenna family is characterized by its gentle and friendly towards their customers attention from the first minute who are considered part of the family.</p></img>
 
-    <img id="img2" src="img/stores1.jpg"/>
+    <div class="img1"><img src="img/stores1.jpg"/></div>
 </div>
 <!----------------------------------------------Footer------------------------------------------------------>
 
