--- a/index.html
+++ b/index.html
@@ -61,7 +61,18 @@
     </div>   
   
 <!------------------------------------------------Categories -----------------------------------------------> 
-	
+
+ <div class="container">
+            <section>
+                <div id="box1"><img src="img/01.gif" title=""></div>
+                <div id="box2"><img src="img/02.gif" title=""></div>
+                <div id="box3"><img src="img/03.gif" title=""></div>
+                <div id="box4"><img src="img/04.gif" title=""></div>
+                <div id="box5"><img src="img/05.gif" title=""></div>
+                <div id="box6"><img src="img/06.gif" title=""></div>
+            </section>
+</div>   
+   	
 
 <!----------------------------------------------Footer------------------------------------------------------>
 
